internal/frontend/kubernetes/testdata/hostnetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  name: host
spec:
  hostNetwork: true
  containers:
    - name: app
      image: busybox:1.37
