internal/frontend/kubernetes/testdata/privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dangerous
spec:
  containers:
    - name: app
      image: busybox:1.37
      securityContext:
        privileged: true
